--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,10 +5,10 @@
         <h1><a href="#">サンプル内装</a></h1>
           <nav class="header-nav">
             <ul>
-              <li><a href="#">企業理念</a></li>
+              <li><%= link_to "企業理念", homes_company_path %></li>
               <li><a href="#">施工事例</a></li>
-              <li><a href="#">採用情報</a></li>
-              <li><a href="#">お問い合わせ</a></li>
+              <li><%= link_to "採用情報", homes_recruit_path %></li>
+              <li><%= link_to "お問い合わせ", homes_contact_path %></li>
             </ul>
           </nav>
         </div>
